# Language_diversity_common_crawler

./: .gitignore  Makefile  README.md  background_execution.sh  bug.py  cc_fastwarc.py  check_background_cc.sh  default.ini  map_bash_count_to_pipeline.txt  mguesser  my_dependencies.yml  notes.md  process.sh  requirements.txt  script.py  sequential_cc_fastwarc.py  small.wet  ssh_connections  tmp.log.tmp  tmp.txt
commands/: boilerplate.sh  boilerplate_removal.py  comp_lang_id_process.sh  compare.sh  count_compare_warc_curl.sh  count_fastwarc_result.sh  count_fix_lang.sh  count_uniq_lines.sh  debug  fasrawc_generetate_graph_comparaison.sh  find_col_number.sh  generate_graph_cc_curl_lang_cmp.sh  lang_id.sh  lang_id_langclass.sh  lang_id_whatlang.sh  locally_curled.sh  nohup.out  nohup163.out  nohup_162.out  pre_step_for_count.sh  remove_empty_results.sh  test.sh  test.test  test.test.test  test_result.test  testtextcat
commands/.bsp/: sbt.json
commands/.libs/: createfp  libexttextcat-2.0.0.dylib  libexttextcat-2.0.dylib  testtextcat
commands/filters/: headers.sh  meta.sh  redirection.sh
commands/graphs/: stats_cc_lang_diversity.dem
commands/stats/: ratio_change.sh
data/language_identification/langclass/: languages.txt
data/language_identification/whatlang/: languages.txt
experiments/parse_ini_stackoverflow/: parser_ini.sh
graphs/: grep  stats_cc_lang_diversity.dem
graphs/dem/: cc_header.dem  faswarc_lang_id_comp.dem
libs/boilerplate_removal/victoria/: COPYING  INSTALL  TODO  config.dist  install.sh  pavuk-css-2.diff  pavuk-css.diff  users
libs/boilerplate_removal/victoria/pavuk/: .cvsignore  BUGS  COPYING  CREDITS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  ac-config.h.in  aclocal.m4  configure  configure.in  cvsbuild.sh  mime.types  pavuk-gtkrc  pavuk.desktop  pavuk.lsm  pavuk.nsi  pavuk.spec  wget-pavuk.HOWTO
libs/boilerplate_removal/victoria/pavuk/CVS/: Entries  Repository
libs/boilerplate_removal/victoria/pavuk/autom4te.cache/: output.1  requests  traces.0  traces.1
libs/boilerplate_removal/victoria/pavuk/button_icons/CVS/: Entries  Repository
libs/boilerplate_removal/victoria/pavuk/button_icons/frederic/CVS/: Entries  Repository
libs/boilerplate_removal/victoria/pavuk/button_icons/gnome/CVS/: Repository
libs/boilerplate_removal/victoria/pavuk/button_icons/old/CVS/: Repository
libs/boilerplate_removal/victoria/pavuk/doc/: Makefile.am  Makefile.in  pavuk.docbook.xml.in
libs/boilerplate_removal/victoria/pavuk/doc/CVS/: Entries  Repository
libs/boilerplate_removal/victoria/pavuk/icons/: Makefile.am  Makefile.in
libs/boilerplate_removal/victoria/pavuk/icons/CVS/: Entries  Repository
libs/boilerplate_removal/victoria/pavuk/m4/: cpp_option.m4  sighandler_t.m4  signal.m4  socklen_t.m4
libs/boilerplate_removal/victoria/pavuk/m4/CVS/: Entries  Repository
libs/boilerplate_removal/victoria/pavuk/man/: .cvsignore  Makefile.am  Makefile.in  pavuk.1.in
libs/boilerplate_removal/victoria/pavuk/man/CVS/: Entries  Repository
libs/boilerplate_removal/victoria/pavuk/po/: .cvsignore  Makefile.am  Makefile.in  de.po
libs/boilerplate_removal/victoria/pavuk/po/CVS/: Entries  Repository  Root
libs/boilerplate_removal/victoria/pavuk/scripts/: t.sh
libs/boilerplate_removal/victoria/pavuk/scripts/CVS/: Entries  Repository
libs/boilerplate_removal/victoria/pavuk/src/: .cvsignore  Makefile.am  Makefile.in  absio.c  absio.h  abstract.c  abstract.h  ainterface.c  ainterface.h  authinfo.c  base64.c  base64.h  bufio.c  bufio.h  cleanup.c  cmdparse.c  condition.c  condition.h  config.c  config.h  cookie.c  cookie.h  css.c  css.h  debugl.c  debugl.h  decode.c  decode.h  digest_auth.c  digest_auth.h  dinfo.c  dirent-win32.c  dirent-win32.h  dlhash.c  dlhash.h  dlhash_tools.c  dllist.c  dllist.h  dns.c  dns.h  (+105 more)
libs/boilerplate_removal/victoria/pavuk/src/CVS/: Entries  Repository
libs/boilerplate_removal/victoria/pavuk/src/icons/CVS/: Entries  Repository
libs/boilerplate_removal/victoria/pavuk/src/xpm/CVS/: Entries  Repository
libs/boilerplate_removal/victoria/pavuk/tests/: Makefile.am  Makefile.in  TestScenario1b.txt  TestScenario1c.txt  TestScenario2a.txt  TestScenario2b.txt  TestScenario4a.txt  test_unix_pavuk1a.sh  test_unix_pavuk1b.sh  test_unix_pavuk2a.sh  test_unix_pavuk3a.sh  test_unix_pavuk4a.sh  test_unix_pavuk5a.sh  test_unix_pavuk6.sh  test_unix_pavuk7a.sh  test_url_pat1.bat  test_win32_pavuk1a.bat  test_win32_pavuk1b.bat  test_win32_pavuk2a.bat  test_win32_pavuk2b.bat  test_win32_pavuk3a.bat  test_win32_pavuk4a.bat  test_win32_pavuk7a.bat  test_win32_pavuk8a.bat  test_win32_pavuk8b.bat
libs/boilerplate_removal/victoria/pavuk/tests/CVS/: Entries  Repository
logs/: nohup.out  nohup163.out
src/: default_cc_curl.ini  main.py  main_concurrent.py
src/extractions/: extraction.py  local_extraction.py  warc_extraction.py
src/handlers/: boiler_plate_handler.py  content_length_handler.py  curl_handler.py  decoding_handler.py  extraction_handler.py  handler_basis.py  language_identification_handler.py  repo_handler.py  stats_handler.py
src/repos/: file_repo.py
src/stats/: accuracy.py  base.py  performance.py  redirect.py  unknown.py
src/strategies/boilerplate_removal/: boilerplate_removal.py  boilerplate_removal_resiliparse_html2text.py
src/strategies/decoding/: decoding.py
src/strategies/language_identification/: base.py  cld2.py  detect_fast.py  (+1 more)
v1/: .gitignore  script.py
v1/commands/: boilerplate_removal.py  cc_boilerplate_removal.py  concat_count.sh  locally_curled.sh  sed_filter_lang_id.txt  undefinied_ratio.sh
v2/: .gitignore  Makefile  background_execution.sh  compare_curl_warc.py  compare_workers.sh  concurrent_compare_curl_warc.py  default.ini  log_prob_to_prob.sh  mem_usage_profiling.py  meta_language.py  my_dependencies.yml  split_concurrent_compare_curl_warc.py  test_langid.py  util.py
v2/commands/: concat_dat_files.sh  count_compare_result.sh  count_fastwarc_result.sh  generate_graphs_from_logs.sh
v2/experiments/: concurrent_cc_fastwarc.py
v2/src/: default.ini  file_repo.py  main.py
(+47 files in other folders)
